# todolist

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/core/: admin.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/todolist/: settings.py  urls.py
