[tool.poetry]
name = "django-projects"
version = "0.1.0"
description = ""
authors = ["YuryRass <yurchik1997yurchik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "^0.11.2"
django = "^5.0.6"
djangorestframework = "^3.15.2"
social-auth-app-django = "^5.4.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.isort]
py_version = 3.10
profile = 'django'
line_length = 120
multi_line_output = 2
known_first_party = ["todolist", "core"]
